--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -271,7 +271,7 @@
 
 .character-model::after {
   content: "";
-  width: 100vw;
+  width: 100%;
   height: 250px;
   background-image: linear-gradient(to bottom,
       transparent,
@@ -285,7 +285,7 @@
 
 .character-model::before {
   content: "";
-  width: 100vw;
+  width: 100%;
   height: 700px;
   background-color: var(--backgroundColor);
   top: 100%;
